css/_theme.scss
/* ... */
.title-features {
    color: #737373;
    font-weight: 600;
    cursor: pointer
}

.container-features-home {
    border-bottom: 1px solid #C1C1C1;
    padding-bottom: 5px;
    margin-bottom: 10px;
}

.container-widgets {
    padding: 0px;
    margin-bottom: 10vh;
    margin-top: 3vh;
    width: calc(100% + 15px);
    margin-left: -10px;
}

.widget-item-title {
    color: #4D4D4D;
    font-size: 16px;
    font-weight: 600;
    padding-top: 25px;
    padding: 25px 5px 0px 5px;
}

.widget-item-title a {
    color: inherit;
    min-height: 40px;
    display: block;
}

.widget-item-description {
    padding-top: 10px;
    padding: 10px 5px 0px 5px;
    font-size: 13px;
}

.widget-item-description p {
    font-size: 14px;
}

.widget-item-footer {
    border-bottom: 1px #999999 solid;
    padding: 0px 5px;
}

.widget-item-footer-tags {
    font-size: 7px;
    font-weight: 500;
    padding: 2px 2px 1px 2px;
    margin-right: 5px;
    color: white;
    background-color: #B3B3B3;
    border-radius: 2px;
    text-transform: uppercase;
}

.widget-item-footer-link {
    position: relative;
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: center;
    width: 20px;
    height: 20px;
    float: right;
    margin-right: 5px;
    cursor: pointer;
}

.widget-item-footer-link:first-of-type {
    margin-right: -1px;
}

.widget-item-footer-link.active path:not(.back) {
    fill: #FF386a;
    stroke: #FF386a;
}

.widget-item-footer-download-small-link {
    background-image: url("../images/download.svg");
}

.widget-item-footer-download-link {
    font-size: 12px;
    font-weight: 600;
    cursor: pointer;
    margin-left: 2px;
    color: rgb(0, 244, 104);
}

.widget-item-footer-download-link:hover {
    color: lighten(rgb(0, 244, 104), 20%);
}

.widgets-second-row {
    margin-top: 12vh;
    width: 100%;
}

.widgets-second-row .widget {
    border: none;
}

.widgets-second-row .popular-datasets-list-item {
    margin-bottom: 3px;
}

.widgets-second-row .popular-datasets-list-item-icon {
    background-repeat: no-repeat;
    background-position: center;
    background-size: 16px;
    width: 16px;
    height: 16px;
    float: left;
    -webkit-filter: grayscale(100%) opacity(80%);
    -moz-filter: grayscale(100%) opacity(80%);
    -o-filter: grayscale(100%) opacity(80%);
    -ms-filter: grayscale(100%) opacity(80%);
    filter: grayscale(100%) opacity(80%);
    position: relative;
}

.popular-datasets-list {
    padding-top: 5px;
}

.popular-datasets-list-item-bar {
    width: 30%;
    height: 10px;
    background: linear-gradient(to right, #FF386a 0%, #FF386a 80%, #999999 80%, #999999 100%);
    display: inline-block;
    border-radius: 5px;
    margin: 0px 15px;
    color: #FF386a;
}

.popular-datasets-list-item-count {
    font-size: 12px;
    font-weight: 600;
    color: #999999;
    position: relative;
    top: -1px;
}

.social-share .module-action {
    cursor: pointer;
    padding: 0 5px;
    position: absolute;
    right: 5px;
}

.social-share .nav .nav-item a {
    padding-top: 5px;
    padding-bottom: 5px;
}

.social-share .nav .nav-item a:focus {
    background: none;
}

.social-share .fa-facebook-square {
    color: #3b5998;
}

.social-share .fa-twitter-square {
    color: #00aced;
}

.social-share .fa-pinterest-square {
    color: #cb2027;
}

.social-share .fa-linkedin-square {
    color: #007bb6;
}

.social-networks {
    padding-top: 1vh;
}

.social-networks-heading {
    color: #999999;
    font-size: 13px;
    font-weight: 600;
}

.social-networks-twitter-user {
    display: table;
    padding-top: 1vh;
}

.social-networks-twitter-user-avatar {
    width: 35px;
    height: 35px;
    background: url("../images/default-avatar.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100%;
    display: inline-block;
}

.social-networks-twitter-user-name {
    font-weight: 600;
    font-size: 17px;
    color: #4D4D4D;
    display: table-cell;
    vertical-align: middle;
    padding-left: 15px;
    height: 33px;
    position: relative;
}

.social-networks-twitter-content {
    margin-top: 1vh;
}

.social-networks-twitter-follow-button {
    float: right;
    height: 18px;
    width: 50px;
    border: 1px #dddddd solid;
    text-align: center;
    background: linear-gradient(to top, #e6e8e8 0%, white 100%);
    border-radius: 5px;
    font-size: 10px;
    line-height: 16px;
    font-weight: 500;
    margin-right: 30px;
    margin-top: 1vh;
}


/**FOOTER*/

.attribution .ckan-footer-logo {
    background-image: none;
    display: inline;
    text-indent: 0;
}

.menu-footer {
    margin: auto;
    padding-bottom: 8px;
    border-bottom: 1px white solid;
    text-align: center;
}

.menu-footer a {
    font-weight: 700;
    display: inline-block;
    margin-right: 15px;
    color: inherit;
}

.menu-footer a:before {
    content: "";
    height: 2em;
    width: 2em;
    display: inline-block;
    margin-left: 3px;
    margin-right: 5px;
    margin-top: -7px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    position: relative;
    top: 7px;
}

.menu-footer-item-specifications:before {
    background: url(../images/footer/specifications.png);
}

.menu-footer-item-terms-and-conditions:before {
    background: url(../images/footer/terms-and-conditions.png);
}

.menu-footer-item-contact:before {
    background: url(../images/footer/contact.png);
}

.menu-footer li {
    display: inherit;
}

.site-footer {
    background-color: #57575a;
    height: 300px;
    color: white;
}

.site-footer a {
    color: inherit;
}

.site-footer .attribution {
    float: right;
    text-align: right;
    margin-top: 75px;
}

.footer-social-networks {
    text-align: center;
    margin-top: 2vh;
}
/* ... */

